--- a/ej2/async.html
+++ b/ej2/async.html
@@ -6,9 +6,36 @@
     <title>Ejercicio Pelicula</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
+<style>
+    body {
+        background-color: #8a85ae;
+    }
+    h1, h2 {
+        color: #000000;
+        text-shadow: -1px 0 #939393, 0 1px #818080, 1px 0 #8e8d8d, 0 -1px #a1a1a1;
+    }
+    .btn-primary {
+        margin-bottom: 1rem;
+        color: #ffffff;
+        background-color: rgba(37, 35, 135, 0.66);
+    }
+    .btn-primary:hover {
+        color: #ffffff;
+        background-color: #1b1a47;
+    }
+    label {
+        color: #000000;
+        text-shadow: -1px 0 #939393, 0 1px #818080, 1px 0 #8e8d8d, 0 -1px #a1a1a1;
+    }
+    select option {
+        background-color: #e8e8e8;
+    }
+</style>
+
 <body>
 <div class="container">
-    <h2 class="mb-4">Película</h2>
+    <h1 class="mb-4">Película</h1>
 
     <!-- Botón para consultar película -->
     <div class="mb-3">
@@ -24,7 +51,7 @@
     </div>
 
     <!-- Datos de la película -->
-    <h3>Detalles de la película</h3>
+    <h2>Detalles de la película</h2>
     <div class="row">
         <div class="col-md-4">
             <div class="form-group">
